welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
	def faireC(c:color) {
	       avance()
	       setCouleurBrosse(c)
	       baisseBrosse()
	      leveBrosse()
	       gauche()
	       avance()
	       gauche()
	       avance()
	       baisseBrosse()
	       gauche()
	       leveBrosse()
	       avance()
	       gauche()
	       avance()
	       avance() 
	}

	
		def  faireC4() { 
			faireC(Color.YELLOW)
			faireC(Color.RED)
			faireC(Color.BLUE)
			faireC(Color.GREEN)
		
	}
	
	
	
	       
}


